src/app/plotter/box/box.component.scss
@import '../../../assets/styles/variables';

.box {
  $this: &;

  cursor: move;
  position: absolute;
  width: 50px;
  height: 50px;
  font-weight: bold;
  color: $color-text;
  background-color: $color-bg-light;
  border-radius: 100%;

  &:after {
    content: '';
    z-index: -1;
    position: relative;
    top: -35px;
    left: -35px;
    display: block;
    width: 70px;
    height: 70px;
    pointer-events: none;
  }

  &:hover {
    &:after {
      pointer-events: auto;
    }

    #{$this}__action {
      opacity: 1;
      pointer-events: auto;

      &--edit {
        transform: translate3d(-26px, -26px, 0);
      }

      &--remove {
        transform: translate3d(8px, -38px, 0);
      }
    }
  }
  &__action {
    position: absolute;
    padding: 5px;
    background-color: map-get($md-accent, 500);
    border-radius: 100%;
    pointer-events: none;
    opacity: 0;
    transition: opacity 0.3s, transform 0.3s;

    &:hover {
      cursor: pointer;
    }

    &--edit {
      transform: translate3d(-32px, -32px, 0);
    }

    &--remove {
      transform: translate3d(4px, -34px, 0);
    }
  }
}

